salesforce-classic-Feature-IN-955/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Gotransverse Billing Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Gotransverse Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GTV_Order_Type__c</fullName>
        <label>GTV Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                    <default>true</default>
                    <label>Order</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Gotransverse Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tract_Sales_Order__c</fullName>
        <label>Gotransverse Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>